--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 {
     color: #333;
+    background: #1e1f24;
     text-align: center;
     font-family: arial;
     font-size: 16px;
@@ -15,6 +16,11 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -33,4 +39,9 @@ body
 #container h1
 {
     font: size:20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
